--- a/requirements/requirements_model.txt
+++ b/requirements/requirements_model.txt
@@ -1,14 +1,8 @@
-pyyaml
 numpy
-scipy
 transformers
-faiss-gpu
 sentencepiece
-adjustText
 datasets
-watermark
 scikit-learn
-matplotlib
 boto3
 wikiextractor
 nltk
@@ -16,4 +10,5 @@ pyter3==0.3
 razdel==0.5.0
 tabulate==0.8.7
 bert-score==0.3.5
+flask
 
